Modified the site I modifies the design of the site and made corrections to the overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-body {
+* {
     margin: none;
+    overflow-y: hidden;
 }
 
 header{
@@ -7,26 +8,26 @@ header{
     margin-left: none;
     display: flex;
     flex-wrap: wrap;
-    padding-top: 4vh;
-    padding-bottom: 2vh;
+    padding-top: 30px;
+    padding-bottom: 25px;
 }
 
 .name {
     font-size: 30px;
     font-weight: bold;
-    margin-top: -3vh;
-    padding-left: 2vw;
+    padding-left: 24px;
+    margin-top: -20px;
 }
 
 .nav {
-    margin-left: 10vw;
+    margin-left: 500px;
     display: flex;
     flex-wrap: wrap;
 }
 
 .nav ul{
     display: flex;
-    padding-left: 12vw;
+    padding-left: 190px;
     border-right: 1px solid rgb(70, 67, 67);
 }
 
@@ -39,6 +40,7 @@ header{
 .whatsapp {
     display: flex;
     flex-wrap: wrap;
+    height: 80px;
     margin-left: 2vw;
     margin-top: 1vh;
     padding-right: 2vw;
@@ -50,18 +52,21 @@ header{
 }
 
 .number {
-    padding-left: 1vw;
-    margin-top: -2vh;
-    font-size: 16px;
+    height: 40px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-bottom: 50px;
+    margin-top: -25px;
+    font-size: 15px;
 }
 
 .number p{
-    line-height: 1vh;
+    line-height: 15px;
 }
 
 .contain {
-    height: 100vh;
-    width: 100vw;
+    height: 1100px;
+    width: 1600px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -69,7 +74,7 @@ header{
 .text {
     width: 40vw;
     height: 60vw;
-    padding-left: 2vw;
+    padding-left: 30px;
 }
 
 .service {
@@ -77,7 +82,7 @@ header{
 }
 
 .service h4{
-    font-size: 50px;
+    font-size: 70px;
     font-weight: bold;
 }
 
@@ -98,28 +103,29 @@ header{
 }
 
 .open img {
-    height: 4vh;
-    width: 2.5vw;
-    padding-right: 1vw;
+    height: 40px;
+    width: 40px;
+    padding-right: 12px;
 }
 
 .day {
-    margin-top: -2vh;
-    line-height: 1vh;
+    margin-top: -20px;
+    line-height: 20px;
+    font-size: 16px;
 }
 
 
 .image {
-    margin-left: 10vw;
+    margin-left: 8vw;
     background-image: url(Image.jpg);
     background-repeat: no-repeat;
     background-size: contain;
-    height: 80vh;
-    width: 40vw;
+    height: 700px;
+    width: 700px;
 }
 
 .quick {
-    height: 10.5vh;
+    height: 11vh;
     width: 16.5vw;
     background-color: rgba(255, 255, 255, 0.43);
     border-radius: 50px;
@@ -133,7 +139,7 @@ header{
 }
 
 .quickservice {
-    height: 8vh;
+    height: 9vh;
     width: 15vw;
     background-color: white;
     border-radius: 50px;
@@ -143,10 +149,10 @@ header{
 }
 
 .hour {
-    margin-left: 0.5vw;
-    margin-top: 0.5vh;
-    height: 7vh;
-    width: 7vh;
+    margin-left: 10px;
+    margin-top: 10px;
+    height: 60px;
+    width: 60px;
     align-content: center;
     background-color: rgb(57, 136, 106);
     border-radius: 5vh;
@@ -154,8 +160,8 @@ header{
 }
 
 .hr {
-    margin-top: -0.5vh;
-    margin-left: -2vh;
+    margin-top: -9px;
+    margin-left: -22px;
 }
 
 .quickservice p{
@@ -166,12 +172,12 @@ header{
 
 
 .rate {
-    height: 10.5vh;
+    height: 11vh;
     width: 16.5vw;
     background-color: rgba(255, 255, 255, 0.43);
     border-radius: 50px;
     margin-top: 40vh;
-    margin-left: 24vw;
+    margin-left: 400px;
 }
 
 .starrating {
@@ -180,29 +186,30 @@ header{
 }
 
 .starrate {
-    height: 8vh;
+    height: 9vh;
     width: 15vw;
     background-color: white;
     border-radius: 50px;
     margin-left: 9px;
     margin-top: 1vh;
     display: flex;
-    line-height: 5px;
+    line-height: 20px;
 }
 
 .st {
-    margin-top: -0.5vh;
-    margin-left: 2vh;
+    margin-top: -10px;
+    margin-left: 30px;
+    height: 200px;
 }
 
 .st p{
-    margin-top: 2.5vh;
-    font-size: 25px;
+    margin-top: 25px;
+    font-size: 20px;
+    line-height: 20px;
 }
 
 .starrate img {
-    margin-top: 2vh;
-    padding-left: 0.5vw;
+    margin-top: 20px;
     width: 9vw;
     height: 3.5vh;
 }
